# SFMLGameDesign

./: .gitignore  .travis.yml  Aircraft.cpp  Aircraft.h  Application.cpp  Application.h  CMakeLists.txt  Category.cpp  CommandQueue.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Game.sln  Game.vcxproj  Game.vcxproj.filters  LICENSE  Player.h  README.md  ResourceHolder.hpp  ResourceHolder.inl  SceneNode.cpp  SceneNode.h  SpriteNode.h  StringHelpers.hpp  World.cpp  World.h  main.cpp
commands/: Category.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  README.md
entities/: Aircraft.cpp  Aircraft.h  Entity.cpp  Entity.h  Player.cpp  Player.h
logic/: World.cpp  World.h
nodes/: SceneNode.cpp  SceneNode.h  SpriteNode.cpp
states/: GameState.cpp  GameState.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h  ParallelTask.cpp  ParallelTask.h  PauseState.cpp  PauseState.h  State.cpp  State.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  TitleState.cpp  TitleState.h
utilities/: ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.h  Utility.h  Utility.inl
